syntax = "proto3";

option go_package = "github.com/gna69/bot-auth-service/proto";

service AuthService {
  rpc AuthUser(User) returns (AuthResponse) {}
  rpc GetUserGroups(GroupsRequest) returns (GroupsResponse) {}

  rpc CreateGroup(Group) returns (Result) {}
  rpc RemoveGroup(Group) returns (Result) {}
  rpc AddToGroup(GroupRequest) returns (Result) {}
  rpc DeleteFromGroup(GroupRequest) returns (Result) {}
}

message GroupsRequest {
  int32 ownerId = 1;
}

message GroupsResponse {
  repeated Group groups = 1;
}

message GroupRequest {
  string addingUser = 1;
  int32 initiatorId = 2;
  int32 groupId = 3;
}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string userName = 4;
  string languageCode = 5;
  bool isBot = 6;
  uint64 chatId = 7;
}

message Group {
  int32 id = 1;
  int32 ownerId = 2;
  string name = 3;
  repeated string members = 4;
}

message Result {
  Status status = 1;
}

message AuthResponse {
  Status status = 1;
  repeated int32 userGroups = 2;
}

enum Status {
  SUCCESS = 0;
  ERROR = 1;
}